recuperação do código perdido